a11y: fix color contrast issues

--- a/src/scss/_Config.scss
+++ b/src/scss/_Config.scss
@@ -1,6 +1,8 @@
 $color-black: #15161a;
 $color-blue: #a0c2de;
 $color-blue-text: #2E5984;
+$color-brown: #7d7165;
+$color-brown-text: #77695F;
 $color-green: #79c050;
 $color-green-text: #385C23;
 $color-grey: #c5c5c5;
