--- a/src/scss/components/Footer.scss
+++ b/src/scss/components/Footer.scss
@@ -2,6 +2,7 @@
   background: $color-white;
   border-top: 1px solid $border-color;
   bottom: 0;
+  color: $color-brown-text;
   font-size: 0.9rem;
   left: 0;
   padding: $space/2;
