--- a/src/scss/components/_GameClues.scss
+++ b/src/scss/components/_GameClues.scss
@@ -37,7 +37,7 @@
   }
 
   .symbol {
-    color: $color-green;
+    color: $color-brown-text;
     font-weight: bold;
     padding-right: $space/3;
   }
